--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
                 <li><a href="#awards" class="nav-link">Awards</a></li>
-                <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             <div class="hamburger" id="hamburger">
                 <span></span>
@@ -59,7 +58,7 @@
                     <h2 class="hero-subtitle">Actress • Model • Creative Producer</h2>
                     <p class="hero-tagline">"Bringing stories to life—in front of the camera and behind the scenes."</p>
                     <div class="hero-buttons">
-                        <a href="#contact" class="btn btn-primary pulse-btn">BOOK NOW</a>
+                        <button id="heroBookNowBtn" class="btn btn-primary pulse-btn">BOOK NOW</button>
                         <a href="#portfolio" class="btn btn-outline">View Portfolio</a>
                     </div>
                 </div>
@@ -234,14 +233,6 @@
        
         </div>
     </section>
-    <!-- Book Now Section -->
-    <section class="book-now" id="contact">
-        <div class="container">
-            <h2 class="section-title fade-in">Ready to Work Together?</h2>
-            <p class="book-description fade-in">Let's bring your vision to life. Contact me for acting, modeling, or production opportunities.</p>
-            <button id="bookNowBtn" class="btn btn-primary pulse-btn book-now-btn">BOOK NOW</button>
-        </div>
-    </section>
 
     <!-- Contact Modal -->
     <div id="contactModal" class="modal">
@@ -299,7 +290,6 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                
                 <div class="footer-social">
                     <h3>Stay Connected</h3>
                     <div class="social-links">
